First working iteration!
Added `dotenv` dependency. The script will now splice in the `YT2INVIDIOUS_DESTINATION` environment variable and change the window's location to the result.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/graysonlee123/yt2invidious#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
     "prepend-file": "^2.0.1",
     "uglify-js": "^3.18.0"
