--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node build.js",
-    "watch": "nodemon index.js --exec 'npm start'"
+    "dev": "nodemon index.js --exec 'npm start'"
   },
   "repository": {
     "type": "git",
